 - Arrow Entity Texture to match Arrow item colors.
 - Custom Torch models to preserve current torch features in anticipation of upcoming Minecraft updates. (Java)
Updated:
 - Updated to pack format 34 (1.21.1).
 - Bow texture.
 - Endermen texture.
 - Zombie texture.
 - Chiseled Stone Bricks texture.
 - Hotbar texture.
 - Empty Shield Slot texture.
 - Heart, Armor, and Hunger stat textures.

LavidaCraft 1.5

All changes are included in both Java and Bedrock unless otherwise specified.
Added:
 - Diamond Ore texture.
 - Dragon Breath texture.
 - Experience Bottle texture.
 - Centered Chiseled Stone Bricks texture.
 - Enchanted Book texture.
 - Custom Chorus Flower model. (Java)
 - Potion textures to match the Java version of LavidaCraft. (Bedrock)
 - Java style Explosion. (Bedrock)
Updated:
 - Updated to Minecraft 1.20.6.
 - Resource Pack icon.
 - Potion and Honey Bottle textures for higher quality.
 - Brewing Stand UI to match the changes made to bottles.
 - Glowstone and Glowstone Dust textures to be closer to Vanilla.
 - Enderman texture to reduce contrast of it's teeth.
 - Chicken, Feather, and Writable Book to match Vanilla colors.
 - Redstone Torch to match the color of other torches.
 - Ore textures for higher quality.
 - Sugar texture.
 - Rail Corner texture.
 - Zombie texture for consistency and higher quality.
 - XP and related bars.
 - Tall Seagrass textures to improve quality.
 - Diamond Armor texture.
 - Netherite Tools and Armor.
 - Destroy Animation to 32*32 instead of 64*64 and to improve quality.
 - Bedrock texture.
 - Book, Writable, and Written Book textures for consistency and quality.
 - End Crystal to match Bedrock.
 - GUI to meet Minecraft's internal changes to how they work. (Java)
 - Rail Fix textures to connect better with normal rails. (Java)
 - Enchantment Glint to match Minecraft's internal changes. (Java)
 - Recipe Book texture to match books. (Java)
 - Torch and Soul Torch textures to improve animation quality. (Java)
Fixed: