@@ -21,37 +21,28 @@
 		},
 		{
 			"from": [0, 6, 6],
-			"to": [16, 22, 6],
-			"faces": {
-				"north": {"uv": [0, 0, 16, 16], "texture": "#1"}
-			}
-		},
-		{
-			"from": [0, 6, 10],
 			"to": [16, 22, 10],
+			"rotation": {"angle": 0, "axis": "y", "origin": [0, 6, 6]},
 			"faces": {
+				"north": {"uv": [0, 0, 16, 16], "texture": "#1"},
 				"south": {"uv": [0, 0, 16, 16], "texture": "#1"}
 			}
 		},
 		{
 			"from": [6, 6, 0],
-			"to": [6, 22, 16],
+			"to": [10, 22, 16],
+			"rotation": {"angle": 0, "axis": "y", "origin": [6, 6, 0]},
 			"faces": {
+				"east": {"uv": [0, 0, 16, 16], "texture": "#1"},
 				"west": {"uv": [0, 0, 16, 16], "texture": "#1"}
 			}
 		},
 		{
-			"from": [10, 6, 0],
-			"to": [10, 22, 16],
+			"from": [6, 16, 6],
+			"to": [10, 16, 10],
+			"rotation": {"angle": 0, "axis": "y", "origin": [6, 16, 6]},
 			"faces": {
-				"east": {"uv": [0, 0, 16, 16], "texture": "#1"}
-			}
-		},
-		{
-			"from": [0, 16, 0],
-			"to": [16, 16, 16],
-			"faces": {
-				"up": {"uv": [0, 0, 16, 16], "texture": "#2"}
+				"up": {"uv": [6, 6, 10, 10], "texture": "#2"}
 			}
 		}
 	]
